--- a/htmlProject.html
+++ b/htmlProject.html
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/Aled.css">
 </head>
 
@@ -27,11 +26,11 @@
         <div class="menu-logo">
             <ul>
                 <li><img src="projet-img/img-site/Icône/icons8-linkedin-30.png"></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
-                <li><img src=""></li>
+                <li><img src="projet-img/img-site/Icône/icons8-github-30.png"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-twitter-30.png"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-mail-30.png"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-stack-overflow-30.png"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-league-of-legends-30.png"></li>
             </ul>
         </div>
     </div>
@@ -41,52 +40,52 @@
             <div class="title-article">Navigation</div>
             <ul>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-matt-paper-32.png" class="img-liste">
                     <p>Blog</p>
                 </li>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-linkedin-30.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-moleskine-32.png" class="img-liste">
                     <p>Categories</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p>Guest post</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p>Web development</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p>App development</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p>Blogging</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p>Design resources</p>
                 </li>
 
 
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-male-user-32.png" class="img-liste">
                     <p>Authors</p>
                 </li>
 
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p> Lissa Doniro</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p> Michael Kordvani</p>
                 </li>
-                <li class="liste-navigation">
+                <li class="liste-navigation-2">
                     <p> jmtalarn</p>
                 </li>
 
 
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-search-32.png" class="img-liste">
                     <p>Search</p>
                 </li>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-about-32.png" class="img-liste">
                     <p>About</p>
                 </li>
             </ul>
@@ -265,6 +264,9 @@
                 </p>
             </div>
         </div>
+    </div>
+    <div class="bouton">
+        <button class="btn btn-primary" id="btn-article">Go to Next Page >></button>
     </div>
 </div>
 </body>
