--- a/htmlProject.html
+++ b/htmlProject.html
@@ -25,12 +25,12 @@
         </div>
         <div class="menu-logo">
             <ul>
-                <li><img src="projet-img/img-site/Icône/icons8-linkedin-30.png"></li>
-                <li><img src="projet-img/img-site/Icône/icons8-github-30.png"></li>
-                <li><img src="projet-img/img-site/Icône/icons8-twitter-30.png"></li>
-                <li><img src="projet-img/img-site/Icône/icons8-mail-30.png"></li>
-                <li><img src="projet-img/img-site/Icône/icons8-stack-overflow-30.png"></li>
-                <li><img src="projet-img/img-site/Icône/icons8-league-of-legends-30.png"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-linkedin-30.png" alt="Icon linkedin"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-github-30.png" alt="Icon github"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-twitter-30.png" alt="Icon twitter"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-mail-30.png" alt="Icon mail"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-stack-overflow-30.png" alt="Icon stackOverflow"></li>
+                <li><img src="projet-img/img-site/Icône/icons8-league-of-legends-30.png" alt="Icon LeagueOflegend"></li>
             </ul>
         </div>
     </div>
@@ -40,11 +40,11 @@
             <div class="title-article">Navigation</div>
             <ul>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-matt-paper-32.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-matt-paper-32.png" class="img-liste" alt="Icon mattPaper">
                     <p>Blog</p>
                 </li>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-moleskine-32.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-moleskine-32.png" class="img-liste" alt="Icon Moleskine">
                     <p>Categories</p>
                 </li>
                 <li class="liste-navigation-2">
@@ -65,7 +65,7 @@
 
 
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-male-user-32.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-male-user-32.png" class="img-liste" alt="Icon Male-User">
                     <p>Authors</p>
                 </li>
 
@@ -81,22 +81,22 @@
 
 
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-search-32.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-search-32.png" class="img-liste" alt="Icon Search">
                     <p>Search</p>
                 </li>
                 <li class="liste-navigation">
-                    <img src="projet-img/img-site/Icône/icons8-about-32.png" class="img-liste">
+                    <img src="projet-img/img-site/Icône/icons8-about-32.png" class="img-liste" alt="Icon about">
                     <p>About</p>
                 </li>
             </ul>
         </div>
         <div class="article" id="article1">
-            <img src="projet-img/img-site/activate-google-amp.png" class="img-article">
+            <img src="projet-img/img-site/activate-google-amp.png" class="img-article" alt="Icon Google">
             <div class="content">
                 <div class="title-article">How to activate Google's AMP and what they are</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="text">
                     <a class="auteur-article" href="#">Lissa Dorino</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">How to activate Google's AMP and what they are Do you know the Accelerated
                     Mobile Pages or AMP? This
@@ -110,12 +110,12 @@
             </div>
         </div>
         <div class="article" id="article2">
-            <img src="projet-img/img-site/be-delivery-driver.jpg" class="img-article">
+            <img src="projet-img/img-site/be-delivery-driver.jpg" class="img-article" alt="Image Driver">
             <div class="content">
                 <div class="title-article">Tough Time Finding A job? Consider Being A Delivery Drive</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">Michael Kordvani</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">Tough Time Finding A Job? Consider Being A Delivery Driver There are times when
                     it is very difficult
@@ -128,14 +128,14 @@
             </div>
         </div>
         <div class="article" id="article3">
-            <img src="projet-img/img-site/drake-no-js-drake-yes-ts.png" class="img-article">
+            <img src="projet-img/img-site/drake-no-js-drake-yes-ts.png" class="img-article" alt="image Drake">
             <div class="content">
                 <div class="title-article">3 Must Have Toolds for JavaScript App Development Programmers Who Do NOT Love
                     JavaScript
                 </div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">Michael Kordvani</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">02/12/2017 à 21:45:53</p></div>
                 <p class="text-article">What is React? React (sometimes called also ReactJs) is a library to create
                     reusable components and
@@ -149,12 +149,12 @@
 
         </div>
         <div class="article" id="article4">
-            <img src="projet-img/img-site/reactjs-passdata.jpg" class="img-article">
+            <img src="projet-img/img-site/reactjs-passdata.jpg" class="img-article" alt="Image React">
             <div class="content">
                 <div class="title-article">React quick overview and nested components</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">Though I am all in the JavaScript camp when it comes to app development and
                     programming, I fully
@@ -163,12 +163,12 @@
             </div>
         </div>
         <div class="article" id="article5">
-            <img src="projet-img/img-site/build-publish-ionic-app.png" class="img-article">
+            <img src="projet-img/img-site/build-publish-ionic-app.png" class="img-article" alt="image ionic">
             <div class="content">
                 <div class="title-article">Build and publish a ionic App</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">16/10/2017 à 05:45:53</p></div>
                 <p class="text-article">Build and publish a Ionic application These are the posts about how I
                     implemented a Ionic framework
@@ -177,12 +177,12 @@
             </div>
         </div>
         <div class="article" id="article6">
-            <img src="projet-img/img-site/splash.jpg" class="img-article">
+            <img src="projet-img/img-site/splash.jpg" class="img-article" alt="Image splash">
             <div class="content">
                 <div class="title-article">Build and publish a ionic App - Generate icon and splash images</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">07/10/2017 à 02:32:34</p></div>
                 <p class="text-article">The icon is the first presentation of your app and maybe a bad design or a not
                     so nice icon can make
@@ -193,12 +193,12 @@
             </div>
         </div>
         <div class="article" id="article7">
-            <img src="projet-img/img-site/wordpress-jekyll.png" class="img-article">
+            <img src="projet-img/img-site/wordpress-jekyll.png" class="img-article" alt="image Wordpress">
             <div class="content">
                 <div class="title-article">Migrate a blog from Wordpress to Jekyll</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">22/09/2017 à 23:38:28</p></div>
                 <p class="text-article">In this case the situation was the end of life of Openshift v2, the platform I
                     used to host (for
@@ -212,12 +212,12 @@
             </div>
         </div>
         <div class="article" id="article8">
-            <img src="projet-img/img-site/live_update.jpg" class="img-article">
+            <img src="projet-img/img-site/live_update.jpg" class="img-article" alt="image Update">
             <div class="content">
                 <div class="title-article">Build and publish a Ionic App - Cordova plugins</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">18/08/2017 à 14:28:28</p></div>
                 <p class="text-article">We wanted to create a kind of live update of the Firebase backend while the
                     users were using the app
@@ -231,13 +231,13 @@
             </div>
         </div>
         <div class="article" id="article9">
-            <img src="projet-img/img-site/Cordova_Alaska_aerial_view.jpg" class="img-article">
+            <img src="projet-img/img-site/Cordova_Alaska_aerial_view.jpg" class="img-article" alt="image Alaska">
             <div class="content">
                 <div class="title-article">Build and publish Ionic App - live update of Firebase backend with AngularJS
                 </div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">11/08/2017 à 18:49:17</p></div>
                 <p class="text-article">Ionic provide you a framework to quickly implement with your web development
                     skills a nice native
@@ -248,12 +248,12 @@
 
         </div>
         <div class="article" id="article10">
-            <img src="projet-img/img-site/stuttgart-1598427_1920.jpg" class="img-article">
+            <img src="projet-img/img-site/stuttgart-1598427_1920.jpg" class="img-article" alt="image Stuttgart">
             <div class="content">
                 <div class="title-article">Free practical courses to learn about modern web development</div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="">
+                <div class="logo-text"><img src="" alt="logo Text">
                     <p class="date">04/08/2017 à 18:35:45</p></div>
                 <p class="text-article">Four FREE practical courses about modern web development that will put you on
                     the track of the web
