--- a/htmlProject.html
+++ b/htmlProject.html
@@ -94,9 +94,9 @@
             <img src="projet-img/img-site/activate-google-amp.png" class="img-article" alt="Icon Google">
             <div class="content">
                 <div class="title-article">How to activate Google's AMP and what they are</div>
-                <div class="logo-text"><img src="" alt="text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="text">
                     <a class="auteur-article" href="#">Lissa Dorino</a></div>
-                <div class="logo-text"><img src="" alt="text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">How to activate Google's AMP and what they are Do you know the Accelerated
                     Mobile Pages or AMP? This
@@ -113,9 +113,9 @@
             <img src="projet-img/img-site/be-delivery-driver.jpg" class="img-article" alt="Image Driver">
             <div class="content">
                 <div class="title-article">Tough Time Finding A job? Consider Being A Delivery Drive</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">Michael Kordvani</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">Tough Time Finding A Job? Consider Being A Delivery Driver There are times when
                     it is very difficult
@@ -133,9 +133,9 @@
                 <div class="title-article">3 Must Have Toolds for JavaScript App Development Programmers Who Do NOT Love
                     JavaScript
                 </div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">Michael Kordvani</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">02/12/2017 à 21:45:53</p></div>
                 <p class="text-article">What is React? React (sometimes called also ReactJs) is a library to create
                     reusable components and
@@ -152,9 +152,9 @@
             <img src="projet-img/img-site/reactjs-passdata.jpg" class="img-article" alt="Image React">
             <div class="content">
                 <div class="title-article">React quick overview and nested components</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">Invalid Date</p></div>
                 <p class="text-article">Though I am all in the JavaScript camp when it comes to app development and
                     programming, I fully
@@ -166,9 +166,9 @@
             <img src="projet-img/img-site/build-publish-ionic-app.png" class="img-article" alt="image ionic">
             <div class="content">
                 <div class="title-article">Build and publish a ionic App</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">16/10/2017 à 05:45:53</p></div>
                 <p class="text-article">Build and publish a Ionic application These are the posts about how I
                     implemented a Ionic framework
@@ -180,9 +180,9 @@
             <img src="projet-img/img-site/splash.jpg" class="img-article" alt="Image splash">
             <div class="content">
                 <div class="title-article">Build and publish a ionic App - Generate icon and splash images</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">07/10/2017 à 02:32:34</p></div>
                 <p class="text-article">The icon is the first presentation of your app and maybe a bad design or a not
                     so nice icon can make
@@ -196,9 +196,9 @@
             <img src="projet-img/img-site/wordpress-jekyll.png" class="img-article" alt="image Wordpress">
             <div class="content">
                 <div class="title-article">Migrate a blog from Wordpress to Jekyll</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">22/09/2017 à 23:38:28</p></div>
                 <p class="text-article">In this case the situation was the end of life of Openshift v2, the platform I
                     used to host (for
@@ -215,9 +215,9 @@
             <img src="projet-img/img-site/live_update.jpg" class="img-article" alt="image Update">
             <div class="content">
                 <div class="title-article">Build and publish a Ionic App - Cordova plugins</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">18/08/2017 à 14:28:28</p></div>
                 <p class="text-article">We wanted to create a kind of live update of the Firebase backend while the
                     users were using the app
@@ -235,9 +235,9 @@
             <div class="content">
                 <div class="title-article">Build and publish Ionic App - live update of Firebase backend with AngularJS
                 </div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">11/08/2017 à 18:49:17</p></div>
                 <p class="text-article">Ionic provide you a framework to quickly implement with your web development
                     skills a nice native
@@ -251,9 +251,9 @@
             <img src="projet-img/img-site/stuttgart-1598427_1920.jpg" class="img-article" alt="image Stuttgart">
             <div class="content">
                 <div class="title-article">Free practical courses to learn about modern web development</div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-male-user-16.png" alt="logo Text">
                     <a class="auteur-article" href="#">jmtalarn</a></div>
-                <div class="logo-text"><img src="" alt="logo Text">
+                <div class="logo-text"><img src="projet-img/img-site/Icône/icons8-calendar-16.png" alt="logo Text">
                     <p class="date">04/08/2017 à 18:35:45</p></div>
                 <p class="text-article">Four FREE practical courses about modern web development that will put you on
                     the track of the web
